--- a/showcase/public/assets/styles/@hashicorp/design-system-components-common.css
+++ b/showcase/public/assets/styles/@hashicorp/design-system-components-common.css
@@ -1435,7 +1435,7 @@
 }
 
 .hds-alert--type-page {
-  padding: var(--token-alert-page-padding-vertical) 48px;
+  padding: var(--token-alert-page-padding-vertical) 16px var(--token-alert-page-padding-vertical) 48px;
   border-width: 1px;
   border-bottom-style: solid;
 }
@@ -1444,6 +1444,12 @@
 .hds-mode-cds-g90 .hds-alert--type-page,
 .hds-mode-cds-g100 .hds-alert--type-page {
   border-style: solid;
+}
+.hds-mode-cds-g0 .hds-alert--type-page .hds-alert__dismiss,
+.hds-mode-cds-g10 .hds-alert--type-page .hds-alert__dismiss,
+.hds-mode-cds-g90 .hds-alert--type-page .hds-alert__dismiss,
+.hds-mode-cds-g100 .hds-alert--type-page .hds-alert__dismiss {
+  margin: calc(-1 * var(--token-alert-page-padding-vertical)) -16px 0 var(--token-alert-dismiss-margin-left);
 }
 
 .hds-alert--type-inline {
